# booru-wallpaper

./: .gitignore  Cargo.toml  README.md  bw-config.toml.example
.github/workflows/: rust.yml
src/: cli.rs  config.rs  fetch.rs  main.rs  rating.rs  types.rs
src/fetch/: batch.rs  criteria.rs  media.rs  mod.rs  processing.rs  temp_files.rs
src/resources/: config.toml.example
